
		CHANGES in `mboost' VERSION 1.1-2 (2009-05-xx)

  o  better weights and boundary knots handling in bspatial

  o  cvrisk runs in parallel if package `multicore' is available

  o  errors removed and minor improvements in the manuals


		CHANGES in `mboost' VERSION 1.1-1 (2009-04-21)

  o  new quantile regression facilities.

  o  fix problem with bbs baselearner and cvrisk


		CHANGES in `mboost' VERSION 1.1-0 (2009-03-27)

  o  bbs instead of bss is the default baselearner in gamboost

  o  make sure bbs with weights and expanded observations
     returns numerically the very same results

  o  btree can now deal with multiple variables

  o  new gMDL criterion (contributed by Zhu Wang <zhu.wang@yale.edu>)

  o  make survival package happy again


		CHANGES in `mboost' VERSION 1.0-6 (2009-01-09)

  o  bols allows to specify non-default contrasts.


		CHANGES in `mboost' VERSION 1.0-5 (2008-12-02)

  o  remove experimental memory optimization steps


		CHANGES in `mboost' VERSION 1.0-4 (2008-11-12)

  o  negative gradient of GaussClass() was wrong, spotted by
     Kao Lin <linkao@picb.ac.cn>


		CHANGES in `mboost' VERSION 1.0-3 (2008-11-07)

  o  Date was malformed in DESCRIPTION


		CHANGES in `mboost' VERSION 1.0-2 (2008-11-05)

  o  improved memory footprint in gamboost() and cvrisk()

  o  option to suppress saving of ensembless added to 
     boost_control()

  o  bbs(), bns(), bspatial(): default number of knots changed to 
     a fixed value (= 20)

  o  changed default for grid (now uses all iterations) in 
     cvrisk() and changed plot.cvrisk()

  o  bols: works now for factors and can be set-up
     to use Ridge-estimation. Intercept can be omitted
     now (via center = TRUE).

  o  new btree() baselearner for gamboost() available

  o  fix inconsistencies in regression tests

  o  add coef.gamboost

  o  new generic `survFit'

  o  cosmetics for trace = TRUE


		CHANGES in `mboost' VERSION 1.0-1 (2007-12-09)
